@@ -10,3 +10,7 @@ Fri Oct  5 17:34:53 2001                        Michael Jennings (mej)
 
 Get rid of that buffy stuff.
 ----------------------------------------------------------------------
+Wed Oct 10 15:07:17 2001                        Michael Jennings (mej)
+
+Fixes to make imgtool work properly.
+----------------------------------------------------------------------
